# xopr

./: CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  context_dec_2.md  plan_iframe.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: generate_report.py  generate_slack_report.py  process_traffic.py  visualize_traffic.py
.github/workflows/: codspeed.yml  docs-preview-comment.yml  docs.yml  lint.yml  publish.yml  test.yml  traffic-analytics.yml  update-km-badge.yml
config/: catalog.yaml  catalog_simple.yaml
docs/: api.md  bedmap.md  comparing_picks.md  conf.py  design.md  map.md  myst.yml  sphinx-api.css
docs/notebooks/: AGU2025_poster.ipynb  bed_picks.ipynb  bedmachine_comparison.ipynb  bedmap_demo.ipynb  bedmap_match.ipynb  crossovers.ipynb  nonstandard_data_products.ipynb  qc_demo.ipynb  repicking.ipynb  search_and_scaling.ipynb  xopr_atl06_crossovers.ipynb
notebooks/: bedmap_demo.ipynb  bedmap_polar_projection_note.md
scripts/: README.md  bedmap_overlap_opr.py  benchmark_geoparquet.py  benchmark_geoparquet_cloud.py  benchmark_grid_queries.py  build_bedmap_catalog.py  build_catalog.py  calc_lines.py  convert_bedmap.py  plot_benchmarks.py  upload_bedmap_to_gcloud.sh  upload_stac_catalogs.py  upload_to_gcloud.sh
scripts/benchmark_results/: benchmarks.md  cloud_file_sizes_20251203_154405.csv  cloud_gcs_queries_20251203_154405.csv  cloud_local_queries_20251203_154405.csv  file_sizes_20251203_143009.csv  file_sizes_20251203_143126.csv  file_sizes_20251203_143237.csv  file_sizes_20251203_143325.csv  grid_queries_20251203_171005.csv  grid_queries_awi2016_20251203_172946.csv  grid_queries_awi2016_20251203_173341.csv  query_times_20251203_143009.csv  (+4 more)
seasons/: 2013_Antarctica_Basler.yml  2016_Antarctica_DC8.yml  2019_Antarctica_GV.yml  README.md
tests/: test_bedmap.py
(+107 files in other folders)
